atualização do css

--- a/desafios/desafio12/pacote-d012/index.html
+++ b/desafios/desafio12/pacote-d012/index.html
@@ -14,7 +14,7 @@
             </div>
       </header>
       <main>
-            <section>
+            <section class="brn">
               <p>Estou ficando cansado <br>
                 Da tal tecnologia <br>
                 Só se fala por e-mail <br>
@@ -34,7 +34,7 @@
                 E um coração desenhado. 
                 </p>
             </section>
-            <section>
+            <section class="brn">
                 <p>
                   Arroba agora não pesa <br>
                   É parte de um endereço <br> 
@@ -65,7 +65,7 @@
                   Nas linhas do coração. <br>
                 </p>
             </section>
-            <section>
+            <section class="brn">
                 <p>
                   Agora, escrevo e envio <br>
                   Chegando na mesma hora <br>
