atualização do desafio 12

--- a/desafios/desafio12/pacote-d012/index.html
+++ b/desafios/desafio12/pacote-d012/index.html
@@ -10,7 +10,7 @@
       <header>
             <div id="cabecalho">
               <h1>Cordel Moderno</h1>
-              <p>Por MiLton Duarte</p>
+              <p>Por <a href="https://www.recantodasletras.com.br/poesias/3186743" target="_blank">Milton Duarte</a></p>
             </div>
       </header>
       <main>
