--- a/exercicios/ex023/index.html
+++ b/exercicios/ex023/index.html
@@ -7,36 +7,31 @@
   <style>
 
     body {
+
         font-family: Arial, Helvetica, sans-serif;
+
     }
 
     table {
+
         width: 400px;
+        height: 400px;
         border-collapse: collapse;
-    }
-
-    tr.linha{
-
-        background-color: beige;
 
     }
 
+    .numero {
+
+      text-align: right;
+
+    }
 
     td {
+
         border: 1px solid black;
         padding: 8px;
-        ;
-    }
-
-    td.dado {
-
-        background-color: peru;
-
-    }
-
-    td.big {
-
-      height: 100px;
+        text-align: center;
+        vertical-align: middle;
 
     }
 
@@ -57,20 +52,20 @@
             <td>B1</td>
             <td>C1</td>
           </tr>
-          <tr class="linha">
+          <tr>
             <td>A2</td>
             <td>B2</td>
             <td>C2</td>
           </tr>
           <tr></tr>
-            <td class="dado">A3</td>
+            <td class="numero">A3</td>
             <td>B3</td>
             <td>C3</td>
           </tr>
           <tr>
             <td>A4</td>
             <td>B4</td>
-            <td class="big">C4</td>
+            <td>C4</td>
           </tr>
       </table>
 </body>
