--- a/exercicios/ex023/tabela002.html
+++ b/exercicios/ex023/tabela002.html
@@ -4,8 +4,149 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tabelas</title>
+  <style>
+
+    body {
+
+        font-family: Arial, Helvetica, sans-serif;
+    }
+
+    h1 {
+
+        text-align: center;
+        text-decoration: underline;
+
+    }
+
+    table {
+
+        border: 1px solid black;
+        border-collapse: collapse;
+        width: 500px;
+        margin: auto;
+
+    }
+
+    caption {
+
+        padding: 10px;
+        font-weight: bold;
+        font-size: 1.5em;
+        background-color: rgb(180, 193, 207);
+    }
+
+    thead, tfoot {
+        background-color: gray;
+        color: white;
+        border: 2px solid black;
+    }
+
+    tbody > tr:nth-child(2n) {
+
+        background-color: lightgray;
+    }
+    th {
+
+        padding: 22px;
+        border: 2px solid black;
+    }
+
+    td {
+
+        border: 1px solid black;
+        padding: 10px;
+        font-size: 20px;
+        
+    }
+
+    .estado {
+
+        text-align: center;
+        font-style: italic;
+
+    }
+
+    .numero {
+
+        font-weight: 900;
+        text-align: right;
+
+    }
+
+
+  </style>
 </head>
 <body>
       <h1>Uso de tabelas grandes</h1>
+      <!--
+          ANATOMIA PARA TABELAS GRANDES
+          TABLE
+              CAPTION
+              THEAD
+                  TR, TD, TH
+              TBODY
+                  TR, TD, TH
+              TFOOT
+                  TR, TD, TH
+      -->
+
+      <table>
+        <caption>População das Unidades Federativas</caption>
+        <thead>
+              <tr>
+                  <th >Estado</th>
+                  <th style="width: 50px;">População</th>
+              </tr>
+        </thead>
+        <tbody>
+              <tr>
+                  <td class="estado">São Paulo</td>
+                  <td class="numero">11 451 999</td>
+              </tr>
+              <tr>
+                  <td class="estado">Rio de Janeiro</td>
+                  <td class="numero">6 211 223</td>
+              </tr>
+              <tr>
+                  <td class="estado">Brasília</td>
+                  <td class="numero">2 817 381</td>
+              </tr>
+              <tr>
+                  <td class="estado">Fortaleza</td>
+                  <td class="numero">2 428 708</td>
+              </tr>
+              <tr>
+                  <td class="estado">Salvador</td>
+                  <td class="numero">2 417 678</td>
+              </tr>
+              <tr>
+                  <td class="estado">Belo Horizonte</td>
+                  <td class="numero">2 315 560</td>
+              </tr>
+              <tr>
+                  <td class="estado">Manaus</td>
+                  <td class="numero">2 063 689</td>
+              </tr>
+              <tr>
+                  <td class="estado">Curitiba</td>
+                  <td class="numero">1 773 718</td>
+              </tr>
+              <tr>
+                  <td class="estado">Recife</td>
+                  <td class="numero">1 488 920</td>
+              </tr>
+              <tr>
+                  <td class="estado">Goiânia</td>
+                  <td class="numero">1 437 366</td>
+              </tr>
+
+        </tbody>
+        <tfoot>
+              <tr>
+                <th>Total de Habitantes</th>
+                <td class="numero">34,406,242</td>
+              </tr>
+        </tfoot>
+      </table>
 </body>
 </html>
