atualização exercício 23, desafios 13 part1, part2

--- a/exercicios/ex023/tabela002.html
+++ b/exercicios/ex023/tabela002.html
@@ -24,6 +24,7 @@
         border-collapse: collapse;
         width: 500px;
         margin: auto;
+        position: relative;
 
     }
 
@@ -39,6 +40,13 @@
         background-color: gray;
         color: white;
         border: 2px solid black;
+    }
+
+    thead > tr > th {
+
+        position: sticky;
+        top: -1px;
+        background-color: gray;
     }
 
     tbody > tr:nth-child(2n) {
@@ -139,6 +147,87 @@
                   <td class="estado">Goiânia</td>
                   <td class="numero">1 437 366</td>
               </tr>
+              <tr>
+                <td class="estado">São Paulo</td>
+                <td class="numero">11 451 999</td>
+            </tr>
+            <tr>
+                <td class="estado">Rio de Janeiro</td>
+                <td class="numero">6 211 223</td>
+            </tr>
+            <tr>
+                <td class="estado">Brasília</td>
+                <td class="numero">2 817 381</td>
+            </tr>
+            <tr>
+                <td class="estado">Fortaleza</td>
+                <td class="numero">2 428 708</td>
+            </tr>
+            <tr>
+                <td class="estado">Salvador</td>
+                <td class="numero">2 417 678</td>
+            </tr>
+            <tr>
+                <td class="estado">Belo Horizonte</td>
+                <td class="numero">2 315 560</td>
+            </tr>
+            <tr>
+                <td class="estado">Manaus</td>
+                <td class="numero">2 063 689</td>
+            </tr>
+            <tr>
+                <td class="estado">Curitiba</td>
+                <td class="numero">1 773 718</td>
+            </tr>
+            <tr>
+                <td class="estado">Recife</td>
+                <td class="numero">1 488 920</td>
+            </tr>
+            <tr>
+                <td class="estado">Goiânia</td>
+                <td class="numero">1 437 366</td>
+            </tr>
+            <tr>
+                <td class="estado">São Paulo</td>
+                <td class="numero">11 451 999</td>
+            </tr>
+            <tr>
+                <td class="estado">Rio de Janeiro</td>
+                <td class="numero">6 211 223</td>
+            </tr>
+            <tr>
+                <td class="estado">Brasília</td>
+                <td class="numero">2 817 381</td>
+            </tr>
+            <tr>
+                <td class="estado">Fortaleza</td>
+                <td class="numero">2 428 708</td>
+            </tr>
+            <tr>
+                <td class="estado">Salvador</td>
+                <td class="numero">2 417 678</td>
+            </tr>
+            <tr>
+                <td class="estado">Belo Horizonte</td>
+                <td class="numero">2 315 560</td>
+            </tr>
+            <tr>
+                <td class="estado">Manaus</td>
+                <td class="numero">2 063 689</td>
+            </tr>
+            <tr>
+                <td class="estado">Curitiba</td>
+                <td class="numero">1 773 718</td>
+            </tr>
+            <tr>
+                <td class="estado">Recife</td>
+                <td class="numero">1 488 920</td>
+            </tr>
+            <tr>
+                <td class="estado">Goiânia</td>
+                <td class="numero">1 437 366</td>
+            </tr>
+
 
         </tbody>
         <tfoot>
