atualização do ex024

--- a/exercicios/ex024/iframe002.html
+++ b/exercicios/ex024/iframe002.html
@@ -23,7 +23,9 @@
     <h1>Teste de Iframe</h1>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odio soluta voluptatibus aut eius amet vitae exercitationem earum necessitatibus iure dolor aperiam ex, minus iste fugiat. Voluptatem quaerat magnam exercitationem eligendi! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem, magni. Nemo at sed, voluptatem hic nobis consequuntur sequi qui nesciunt officiis nam iste debitis placeat unde. Facilis eius voluptate in?</p>
 
-    <iframe src="pag001.html" frameborder="0" height="500px" width="500px"></iframe>
+    <iframe src="paginasextras/pag001.html" frameborder="0" height="500px" width="500px">
+      <p>Infelizmente não foi possível carregar o conteúdo.</p>
+    </iframe>
 
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse fuga, rem molestiae doloribus atque, alias incidunt debitis necessitatibus quam dolores accusamus consectetur, perferendis animi a obcaecati eveniet distinctio nobis est? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis incidunt explicabo provident non iusto sint sapiente enim, fuga voluptates nisi ipsa similique inventore illo voluptatem in doloremque odit asperiores maiores.</p>
 
