--- a/desafios/desafio15/index.html
+++ b/desafios/desafio15/index.html
@@ -9,11 +9,14 @@
 </head>
 <body>
   
-    <div id="iphone">
-         
-        <iframe src="imagens/tela-home.jpg" frameborder="0" ></iframe>
+    <main>
+      <section id="telefone">
 
-    </div>
+      </section>
+      <section id="redes-sociais">
+
+      </section>
+    </main>
 
 </body>
 </html>
