--- a/desafios/desafio15/index.html
+++ b/desafios/desafio15/index.html
@@ -13,12 +13,18 @@
       <section id="telefone">
 
             <iframe src="home.html" name="tela" id="tela" frameborder="0">
-
+                  Seu computador não é compatível com isso       
             </iframe>
 
       </section>
-      <section id="redes-sociais">
+      <section id="redes-sociais" name="tela">
 
+            <a href="#" target="name"><img src="imagens/logo-home.jpg" alt="Home"></a>
+            <a href="github.html" target="tela"><img src="imagens/logo-github.jpg" alt="Github"></a>
+            <a href="#" target="name"><img src="imagens/logo-facebook.jpg" alt="Facebook"></a>
+            <a href="#" target="name"><img src="imagens/logo-instagram.jpg" alt="Instagram"></a>
+            <a href="#" target="name"><img src="imagens/logo-twitter.jpg" alt="Twitter"></a>
+            <a href="#" target="name"><img src="imagens/logo-youtube.jpg" alt="Youtube"></a>
         
       </section>
     </main>
