--- a/desafios/desafio15/face.html
+++ b/desafios/desafio15/face.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Github</title>
+  <title>Facebook</title>
 </head>
 <link rel="stylesheet" href="social.css">
 <body>
   
-      <img src="imagens/tela-github.jpg" alt="Git">
-      <a href="https://github.com/gustavoguanabara" target="_blank">Acessar</a>
+      <img src="imagens/tela-facebook.jpg" alt="Face">
+      <a href="https://www.facebook.com/gustavoguanabara/?locale=pt_BR" target="_blank">Acessar</a>
 </body>
 </html>
