--- a/desafios/desafio15/index.html
+++ b/desafios/desafio15/index.html
@@ -19,12 +19,11 @@
       </section>
       <section id="redes-sociais" name="tela">
 
-            <a href="#" target="name"><img src="imagens/logo-home.jpg" alt="Home"></a>
+            <a href="home.html" target="tela"><img src="imagens/logo-home.jpg" alt="Home"></a>
             <a href="github.html" target="tela"><img src="imagens/logo-github.jpg" alt="Github"></a>
-            <a href="#" target="name"><img src="imagens/logo-facebook.jpg" alt="Facebook"></a>
-            <a href="#" target="name"><img src="imagens/logo-instagram.jpg" alt="Instagram"></a>
-            <a href="#" target="name"><img src="imagens/logo-twitter.jpg" alt="Twitter"></a>
-            <a href="#" target="name"><img src="imagens/logo-youtube.jpg" alt="Youtube"></a>
+            <a href="face.html" target="tela"><img src="imagens/logo-facebook.jpg" alt="Facebook"></a>
+            <a href="instagram.html" target="tela"><img src="imagens/logo-instagram.jpg" alt="Instagram"></a>
+            <a href="youtube.html" target="tela"><img src="imagens/logo-youtube.jpg" alt="Youtube"></a>
         
       </section>
     </main>
