atualização do desafio 16

--- a/desafios/desafio16/index.html
+++ b/desafios/desafio16/index.html
@@ -25,7 +25,29 @@
                 <p>Seja bem-vindo(a) novamente. Faça login para acessar sua conta e poder fazer as configurações no seu ambiente </p>
                 <form action="cadastro.php" method="post">
 
+                    <p>
 
+                        <label for="iemail"><img src="imagens/imguser.png" alt="user"></label>
+                        <input type="email" name="email" id="iemail">
+
+                    </p>
+                    <p>
+
+                        <label for="isenha"><img src="imagens/imgkey.png" alt="senha"></label>
+                        <input type="password" name="senha" id="isenha">
+                    </p>
+
+                    <p id="enviar">
+
+                        <input type="submit" value="ENTRAR">
+
+                    </p>
+
+                    <p id="enviar">
+
+                        <input type="submit" value="ESQUECI A SENHA">
+
+                    </p>
                 </form>
             </div>
 
