--- a/desafios/desafio16/index.html
+++ b/desafios/desafio16/index.html
@@ -28,13 +28,13 @@
                     <p>
 
                         <label for="iemail"><img src="imagens/imguser.png" alt="user"></label>
-                        <input type="email" name="email" id="iemail">
+                        <input type="email" name="email" id="iemail" autocomplete="off" required minlength="10" maxlength="25">
 
                     </p>
                     <p>
 
                         <label for="isenha"><img src="imagens/imgkey.png" alt="senha"></label>
-                        <input type="password" name="senha" id="isenha">
+                        <input type="password" name="senha" id="isenha" autocomplete="off" required minlength="5" maxlength="20">
                     </p>
 
                     <p id="enviar">
