--- a/desafios/desafio16/index.html
+++ b/desafios/desafio16/index.html
@@ -23,18 +23,18 @@
 
                 <h1>Login</h1>
                 <p>Seja bem-vindo(a) novamente. Faça login para acessar sua conta e poder fazer as configurações no seu ambiente </p>
-                <form action="cadastro.php" method="post">
+                <form action="cadastro.php" method="post" autocomplete="on">
 
                     <p>
 
                         <label for="iemail"><img src="imagens/imguser.png" alt="user"></label>
-                        <input type="email" name="email" id="iemail" autocomplete="off" required minlength="10" maxlength="25">
+                        <input type="email" name="email" id="iemail" placeholder="Seu e-mail" autocomplete="email" required minlength="10" maxlength="25">
 
                     </p>
                     <p>
 
                         <label for="isenha"><img src="imagens/imgkey.png" alt="senha"></label>
-                        <input type="password" name="senha" id="isenha" autocomplete="off" required minlength="5" maxlength="20">
+                        <input type="password" name="senha" id="isenha" placeholder="Sua senha" autocomplete="current-password" required minlength="5" maxlength="20">
                     </p>
 
                     <p id="enviar">
