--- a/exercicios/ex027/flex006/index.html
+++ b/exercicios/ex027/flex006/index.html
@@ -8,11 +8,11 @@
       div.conteiner {
 
           display: flex;
-          flex-flow: row nowrap;
+          flex-flow: row wrap;
           background-color: lightsalmon;
+          align-content: space-between;
           margin: auto;
-          justify-content: space-around;
-          height: 300px;
+          height: 400px;
 
       }
 
@@ -21,8 +21,7 @@
           background-color: lightskyblue;
           border: 1px solid black;
           text-align: center;
-          width: 50px;
-          height: 50px;
+          padding: 40px;
           
       }
   </style>
@@ -38,6 +37,13 @@
         <div class="item">E</div>
         <div class="item">F</div>
         <div class="item">G</div>
+        <div class="item">H</div>
+        <div class="item">I</div>
+        <div class="item">J</div>
+        <div class="item">K</div>
+        <div class="item">L</div>
+        <div class="item">M</div>
+
 
     </div>
   
