--- a/exercicios/ex027/flex008/index.html
+++ b/exercicios/ex027/flex008/index.html
@@ -8,36 +8,61 @@
       div.conteiner {
 
           display: flex;
-          flex-flow: row nowrap;
           background-color: lightsalmon;
           margin: auto;
-          justify-content: space-around;
           height: 300px;
 
       }
 
       div.item {
-
+        
           background-color: lightskyblue;
           border: 1px solid black;
           text-align: center;
-          width: 50px;
-          height: 50px;
+          padding: 20px;
           
       }
+
+      div#i1 {
+
+        align-self: auto;
+
+      }
+      div#i2 {
+
+        align-self: flex-start;
+
+      }
+
+      div#i3 {
+
+        align-self: flex-end;
+
+      }
+
+      div#i4 {
+
+        align-self: center;
+
+      }
+
+      div#i5 {
+
+        align-self: stretch;
+
+      }
+
   </style>
 </head>
 <body>
 
     <div class="conteiner">
 
-        <div class="item">A</div>
-        <div class="item">B</div>
-        <div class="item">C</div>
-        <div class="item">D</div>
-        <div class="item">E</div>
-        <div class="item">F</div>
-        <div class="item">G</div>
+        <div class="item" id="i1">A</div>
+        <div class="item" id="i2">B</div>
+        <div class="item" id="i3">C</div>
+        <div class="item" id="i4">D</div>
+        <div class="item" id="i5">E</div>
 
     </div>
   
