--- a/exercícios-OneBitCode/desafios/desafio05/index.html
+++ b/exercícios-OneBitCode/desafios/desafio05/index.html
@@ -3,12 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Calculadora de 4 operacoes</title>
+  <title>Teste de Velocidade</title>
 </head>
 <body>
   
-    <h1>Calculadora de 4 operacoes</h1>
+    <h1>Teste de Velocidade</h1>
+
     <script src="index.js"></script>
-    
+
 </body>
 </html>
