--- a/exercícios-OneBitCode/ex008/index.html
+++ b/exercícios-OneBitCode/ex008/index.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Calculadora de 4 operacoes</title>
+  <title>IF e ELSE</title>
 </head>
 <body>
   
-    <h1>Calculadora de 4 operacoes</h1>
+    <h1>IF e ELSE</h1>
     <script src="index.js"></script>
     
 </body>
