--- a/exercícios-OneBitCode/desafios/desafio18/index.html
+++ b/exercícios-OneBitCode/desafios/desafio18/index.html
@@ -4,43 +4,34 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Escalação do time</title>
+  <link rel="stylesheet" href="style.css">
   <script src="index.js"></script>
 </head>
 <body>
   
-  <h1>Escalação do Time</h1>
-
-  <ul>
-
-    <li id="namePerson">
-
-      <label for="nome">Nome do Jogador:</label>
-      <input type="text" id="name" name="name" required>
-
-    </li>
-    <li id="positionPerson">
-
-      <label for="nome">Posição:</label>
-      <input type="text" id="position" name="position" required>
-
-    </li>
-    <li id="numberPerson">
-
-      <label for="nome">Número da Camisa:</label>
-      <input type="number" id="number" name="number" required>
-
-    </li>
-
-    <button onclick="addPerson()">ESCALAR</button>
-    <button onclick="removePerson()">REMOVER</button>
-
-  </ul>
-
-  <section id="escalation-list">
-
-    <h1>Jogadores Escalados</h1>
+  <div class="escalation">
+    <h1>Escalação do Time</h1>
+    <ul>
+      <li id="namePerson">
+        <label for="nome">Nome do Jogador:</label>
+        <input type="text" id="name" name="name" required>
+      </li>
+      <li id="positionPerson">
+        <label for="nome">Posição:</label>
+        <input type="text" id="position" name="position" required>
+      </li>
+      <li id="numberPerson">
+        <label for="nome">Número da Camisa:</label>
+        <input type="number" id="number" name="number" required>
+      </li>
+      <button onclick="addPerson()">ESCALAR</button>
+      <button onclick="removePerson()">REMOVER</button>
+    </ul>
+    <section id="escalation-list">
+      <h1>Jogadores Escalados</h1>
     
-  </section>
+    </section>
+  </div>
 
 </body>
 </html>
