--- a/exercícios-OneBitCode/desafios/desafio18/index.html
+++ b/exercícios-OneBitCode/desafios/desafio18/index.html
@@ -10,25 +10,32 @@
 <body>
   
   <div class="escalation">
+
     <h1>Escalação do Time</h1>
-    <ul>
-      <li id="namePerson">
-        <label for="nome">Nome do Jogador:</label>
-        <input type="text" id="name" name="name" required>
-      </li>
-      <li id="positionPerson">
-        <label for="nome">Posição:</label>
-        <input type="text" id="position" name="position" required>
-      </li>
-      <li id="numberPerson">
-        <label for="nome">Número da Camisa:</label>
-        <input type="number" id="number" name="number" required>
-      </li>
-      <button onclick="addPerson()">ESCALAR</button>
-      <button onclick="removePerson()">REMOVER</button>
-    </ul>
-    <section id="escalation-list">
-      <h1>Jogadores Escalados</h1>
+
+    <div id="team">
+
+      <ul>
+        <li id="namePerson">
+          <label for="name">Nome do Jogador:</label>
+          <input type="text" id="name" name="name" required>
+        </li>
+        <li id="positionPerson">
+          <label for="position">Posição:</label>
+          <input type="text" id="position" name="position" required>
+        </li>
+        <li id="numberPerson">
+          <label for="number">Número da Camisa:</label>
+          <input type="number" id="number" name="number" required>
+        </li>
+        <button onclick="addPerson()">ESCALAR</button>
+        <button onclick="removePerson()">REMOVER</button>
+      </ul>
+
+    </div>
+      <section id="escalation-list">
+
+      <h1 id="playerList">Jogadores Escalados</h1>
     
     </section>
   </div>
